# sccache-demo

./: CMakeLists.txt  README.md  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  main.cpp
.github/workflows/: build.yml
